src/test/deca/syntax/invalid/parser/manque_op_mod.deca
// Il manque opérande à modulo

// Date: 20.01.2022

{
int a = 5 %;
}